force-app/main/default/objects/Arte_Project__c/Arte_Project__c.object-meta.xml
<CustomObject>
    <label>Arte Project</label>
    <nameField>
        <label>Arte Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arte Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>