force-app/main/default/objects/Arte_Project__c/fields/Budget_Available_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Budget_Available_to_Use__c</fullName>
    <label>Budget Available to Use</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>