force-app/main/default/objects/Arte_Project__c/fields/Number_of_All_Submitted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_All_Submitted_Hours__c</fullName>
    <label>Number of All Submitted Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>