force-app/main/default/objects/Arte_Project__c/fields/Sum_of_All_expences__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_All_expences__c</fullName>
    <label>Sum of All expences</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>